--- a/index.ipynb
+++ b/index.ipynb
@@ -547,20 +547,136 @@
     "| Vaga sem `hard_skills`             | `requisitos.hard_skills = NULL`                                          | Falha no INSERT (CHECK constraint)                                             |  \n",
     "| URL duplicada                      | `url_original = \"https://linkedin.com/jobs/123\"` (já existente)          | Erro de constraint `unique_url`                                                |  \n",
     "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d214330",
+   "metadata": {},
+   "source": [
+    "#### **7. Documentação e Ferramentas**  \n",
+    "- **Saída**:  \n",
+    "  - **Diagrama Entidade-Relacionamento (DER)** visualizando entidades, atributos e relacionamentos.  \n",
+    "  - **Ferramentas Sugeridas**:  \n",
+    "    - **ERwin**: Para modelos conceituais e físicos.  \n",
+    "    - **Lucidchart**: Colaboração em nuvem.  \n",
+    "    - **Microsoft Visio**: Diagramas intuitivos.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f58cb71",
+   "metadata": {},
+   "source": [
+    "### **7. Documentação e Ferramentas para o Modelo de Gestão de Vagas**  \n",
+    "\n",
+    "#### **1. Diagrama Entidade-Relacionamento (DER) Final**  \n",
+    "*(Visualização Simplificada)*  \n",
+    "\n",
+    "```mermaid\n",
+    "erDiagram\n",
+    "    CANDIDATO ||--o{ CANDIDATURA : \"REALIZA\"\n",
+    "    CANDIDATO {\n",
+    "        SERIAL id PK\n",
+    "        JSONB habilidades_tecnicas\n",
+    "        NUMERIC[] pretensao_salarial\n",
+    "        VARCHAR github_curriculo\n",
+    "        CHAR(8) batch_atual\n",
+    "    }\n",
+    "    \n",
+    "    VAGA ||--o{ CANDIDATURA : \"RECEBE\"\n",
+    "    VAGA {\n",
+    "        SERIAL id PK\n",
+    "        VARCHAR cargo_padronizado\n",
+    "        JSONB salario_aproximado\n",
+    "        JSONB requisitos\n",
+    "        VARCHAR url_original\n",
+    "        ENUM status_atual\n",
+    "    }\n",
+    "    \n",
+    "    EMPRESA ||--o{ VAGA : \"PUBLICA\"\n",
+    "    EMPRESA {\n",
+    "        SERIAL id PK\n",
+    "        VARCHAR nome\n",
+    "        VARCHAR setor\n",
+    "        VARCHAR porte\n",
+    "    }\n",
+    "    \n",
+    "    PLATAFORMA ||--o{ VAGA : \"HOSPEDA\"\n",
+    "    PLATAFORMA {\n",
+    "        SERIAL id PK\n",
+    "        VARCHAR nome\n",
+    "        VARCHAR url_base\n",
+    "    }\n",
+    "    \n",
+    "    VAGA ||--o{ PROCESSO_SELETIVO : \"POSSUI\"\n",
+    "    PROCESSO_SELETIVO {\n",
+    "        SERIAL id PK\n",
+    "        ENUM etapa_atual\n",
+    "        JSONB[] historico_eventos\n",
+    "    }\n",
+    "    \n",
+    "    VAGA ||--|| SCRAPING_LOG : \"REGISTRA\"\n",
+    "    SCRAPING_LOG {\n",
+    "        VARCHAR(64) url_hash PK\n",
+    "        JSONB dados_crus\n",
+    "        VARCHAR status\n",
+    "        TIMESTAMPTZ timestamp\n",
+    "    }\n",
+    "```\n",
+    "\n",
     "---\n",
     "\n",
-    "#### **5. Próximos Passos**  \n",
-    "1. **Implementar Restrições Faltantes**:  \n",
-    "   - Adicionar CHECK para validar formato de `cargo_padronizado` via regex.  \n",
-    "   - Criar stored procedure para gerenciar limites de batch.  \n",
-    "2. **Documentar Regras**:  \n",
-    "   - Adicionar comentários no schema SQL (ex.: `-- RN02: Validação de campos obrigatórios`).  \n",
+    "#### **2. Ferramentas Recomendadas**  \n",
+    "\n",
+    "| **Ferramenta**       | **Vantagens**                                  | **Link**                          |  \n",
+    "|----------------------|-----------------------------------------------|-----------------------------------|  \n",
+    "| **Lucidchart**       | Colaboração em tempo real, integração com GSuite | [lucid.app](https://lucid.app)   |  \n",
+    "| **draw.io**         | Gratuito, exporta para XML/PNG/SQL            | [app.diagrams.net](https://app.diagrams.net) |  \n",
+    "| **pgAdmin ERD Tool** | Integrado ao PostgreSQL, gera SQL direto      | Já instalado com seu pgAdmin      |  \n",
+    "| **DbDiagram**       | Sintaxe simples, focado em bancos relacionais | [dbdiagram.io](https://dbdiagram.io) |  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **3. Documentação Complementar**  \n",
+    "**A. Modelo Lógico (SQL Ready)**  \n",
+    "```sql\n",
+    "-- Domínios personalizados\n",
+    "CREATE DOMAIN formato_cargo AS VARCHAR(100) \n",
+    "CHECK (VALUE ~ '^[A-Z]+\\|[A-Z_]+\\|[A-Z]+\\|[A-Z_]+\\|[A-Z_]+$');\n",
+    "\n",
+    "-- Tabelas principais\n",
+    "CREATE TABLE candidato (\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    habilidades_tecnicas JSONB NOT NULL,\n",
+    "    pretensao_salarial NUMERIC(10,2)[] CHECK (\n",
+    "        array_length(pretensao_salarial, 1) = 2 \n",
+    "        AND pretensao_salarial[1] < pretensao_salarial[2]\n",
+    "    ),\n",
+    "    github_curriculo VARCHAR(255) UNIQUE,\n",
+    "    batch_atual CHAR(8) CHECK (batch_atual ~ '^v\\d{2}s\\d{2}[1-3]\\d$')\n",
+    ");\n",
+    "```\n",
+    "\n",
+    "**B. Checklist de Validação**  \n",
+    "- [ ] Todos os relacionamentos estão representados no DER  \n",
+    "- [ ] Atributos multivalorados usam JSONB/arrays  \n",
+    "- [ ] Constraints de negócio implementadas (ex.: formato do `batch_id`)  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### **4. Próximos Passos**  \n",
+    "1. **Escolha uma ferramenta** para editar o DER (recomendo **dbdiagram.io** para sintaxe simples).  \n",
+    "2. **Valide o modelo físico**:  \n",
+    "   - Execute os scripts SQL no pgAdmin.  \n",
+    "   - Use a ferramenta ERD do pgAdmin para visualização.  \n",
     "\n",
     "**Confirme**:  \n",
-    "- Todas as regras de negócio estão cobertas?  \n",
-    "- Há cenários de exceção não tratados (ex.: vagas sem salário)?  \n",
+    "- O DER atende a todos os requisitos?  \n",
+    "- Prefere ajustar alguma entidade/relacionamento antes da implementação?  \n",
     "\n",
-    "*(Com sua validação, partiremos para a implementação física!)* 🚀"
+    "*(Com seu OK, geraremos o script completo e documentação técnica!)* 📄"
    ]
   }
  ],
