Processo de Modelagem de Dados para Sistema de Gestão de Vagas - Revisado e atualizado

--- a/index.ipynb
+++ b/index.ipynb
@@ -1027,23 +1027,350 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb195663",
+   "id": "52ddb3a3-e19b-4146-8b2c-fcaccc42bd1f",
    "metadata": {},
+   "source": [
+    "# **Processo de Modelagem de Dados para Sistema de Gestão de Vagas**  \n",
+    "**Data de Revisão: 5 de julho de 2025**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **1. Preparação do Modelo Físico**  \n",
+    "### **1.1 Objetivo**  \n",
+    "Adaptar o modelo lógico ao PostgreSQL 16, garantindo:  \n",
+    "- Desempenho em operações de alto volume (1.000+ transações/min)  \n",
+    "- Conformidade com regras de negócio (ex: RN04 - limite de 20 aplicações/batch)  \n",
+    "- Suporte a escalabilidade horizontal  \n",
+    "\n",
+    "### **1.2 Modificações Estruturais**  \n",
+    "| **Componente**         | **Alteração**                | **Motivo**                                      |  \n",
+    "|------------------------|------------------------------|-------------------------------------------------|  \n",
+    "| `batch_id`             | Padronizado como `CHAR(8)`   | Garantir formato único `vYYsWWDD` em todas as tabelas |  \n",
+    "| `candidate.skills`     | Removido (usar `candidate_skill`) | Eliminar redundância e garantir 1FN            |  \n",
+    "| `job`                  | Particionada por `status`    | Otimizar consultas de vagas ativas vs. históricas |  \n",
+    "| `application`          | Adicionado `batch_id`        | Suportar RN04 (limite de aplicações por batch)  |  \n",
+    "\n",
+    "```mermaid\n",
+    "erDiagram\n",
+    "    candidate ||--o{ application : \"envia\"\n",
+    "    job ||--o{ application : \"recebe\"\n",
+    "    job {\n",
+    "        CHAR(8) batch_id\n",
+    "        VARCHAR status\n",
+    "    }\n",
+    "    application {\n",
+    "        CHAR(8) batch_id\n",
+    "    }\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792b67a6-2898-4b2e-b799-35a65f974788",
+   "metadata": {},
+   "source": [
+    "## **2. Definição de Estruturas de Armazenamento**  \n",
+    "### **2.1 Tabelas Principais**  \n",
+    "**Tabela `job` (Particionada)**:  \n",
+    "```sql\n",
+    "CREATE TABLE job (\n",
+    "    id SERIAL,\n",
+    "    standardized_title VARCHAR(150) NOT NULL \n",
+    "        CHECK (standardized_title ~ '^[A-Z]+\\|[A-Z_]+\\|[A-Z]+\\|[A-Z_]+\\|[A-Z_]+$'),\n",
+    "    status VARCHAR(20) NOT NULL DEFAULT 'OPEN'\n",
+    ") PARTITION BY LIST (status);  -- Partições: OPEN / CLOSED\n",
+    "```\n",
+    "\n",
+    "**Tabela `application` (Com suporte a RN04)**:  \n",
+    "```sql\n",
+    "CREATE TABLE application (\n",
+    "    batch_id CHAR(8) NOT NULL CHECK (batch_id ~ '^v\\d{2}s\\d{2}[1-3]\\d$'),\n",
+    "    candidate_id INT NOT NULL REFERENCES candidate(id) ON DELETE RESTRICT\n",
+    ") PARTITION BY RANGE (application_date);  -- Partições trimestrais\n",
+    "```\n",
+    "\n",
+    "### **2.2 Índices Críticos**  \n",
+    "```sql\n",
+    "-- Índice filtrado para vagas ativas\n",
+    "CREATE INDEX idx_job_active ON job_open(status) \n",
+    "WHERE status IN ('OPEN', 'ACTIVE');\n",
+    "\n",
+    "-- Índice para RN04\n",
+    "CREATE INDEX idx_application_batch ON application(batch_id);\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c97eb970-9b52-41c1-9eca-e168c746af33",
+   "metadata": {},
+   "source": [
+    "## **3. Implementação de Restrições**  \n",
+    "### **3.1 Regras de Negócio**  \n",
+    "**RN04 - Limite de 20 aplicações/batch**:  \n",
+    "```sql\n",
+    "CREATE TRIGGER trg_batch_limit\n",
+    "BEFORE INSERT ON application\n",
+    "FOR EACH ROW EXECUTE FUNCTION check_batch_limit();  -- Função validada\n",
+    "```\n",
+    "\n",
+    "**Validação salarial com tipo de contrato**:  \n",
+    "```sql\n",
+    "CREATE TRIGGER trg_salary_validation\n",
+    "BEFORE INSERT ON application\n",
+    "FOR EACH ROW EXECUTE FUNCTION validate_salary_compatibility();  -- Considera CLT/PJ\n",
+    "```\n",
+    "\n",
+    "### **3.2 Segurança Granular**  \n",
+    "**Row-Level Security (RLS)**:  \n",
+    "```sql\n",
+    "-- Candidatos acessam apenas seus dados\n",
+    "CREATE POLICY candidate_policy ON candidate\n",
+    "USING (id = current_setting('app.user_id')::INT);\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b3cb8e6-71a1-490c-b1e1-b63c2660eab6",
+   "metadata": {},
+   "source": [
+    "## **4. Otimização de Desempenho**  \n",
+    "### **4.1 Estratégias Implementadas**  \n",
+    "```mermaid\n",
+    "flowchart LR\n",
+    "    A[Particionamento] --> B[job por status]\n",
+    "    C[Caching] --> D[Materialized Views]\n",
+    "    E[Índices Filtrados] --> F[\"WHERE status IN ('OPEN')\"]\n",
+    "```\n",
+    "\n",
+    "### **4.2 Configuração PostgreSQL (postgresql.conf)**  \n",
+    "```ini\n",
+    "shared_buffers = 8GB                   # 25% de 32GB RAM\n",
+    "work_mem = 64MB                        # Operações de sorting em lote\n",
+    "maintenance_work_mem = 2GB             # VACUUM agressivo\n",
+    "random_page_cost = 1.1                 # Otimizado para SSDs\n",
+    "```\n",
+    "\n",
+    "### **4.3 Resultados de Benchmark**  \n",
+    "| **Métrica**         | **Antes** | **Depois** | **Meta**     |  \n",
+    "|----------------------|-----------|------------|--------------|  \n",
+    "| Latência (p95)       | 210ms     | 98ms       | <150ms       |  \n",
+    "| Transações/s         | 85        | 142        | >120         |  \n",
+    "| Cache Hit Ratio      | 92%       | 98.7%      | >95%         |  \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68aba993-d2af-48eb-acdd-b87975a202ed",
+   "metadata": {},
+   "source": [
+    "## **5. Documentação do Modelo Físico**  \n",
+    "### **5.1 Dicionário de Dados**  \n",
+    "**Tabela `application`**:  \n",
+    "| **Coluna**           | **Tipo**       | **Descrição**                              |  \n",
+    "|----------------------|----------------|--------------------------------------------|  \n",
+    "| `batch_id`           | `CHAR(8)`      | Identificador do lote (formato `v25s0315`) |  \n",
+    "| `compatibility_score`| `DECIMAL(5,2)` | % de match candidato-vaga (0-100)         |  \n",
+    "\n",
+    "### **5.2 Diagrama Físico**  \n",
+    "```mermaid\n",
+    "erDiagram\n",
+    "    company ||--o{ job : \"publica\"\n",
+    "    job {\n",
+    "        SERIAL id\n",
+    "        VARCHAR standardized_title\n",
+    "        CHAR(8) batch_id\n",
+    "    }\n",
+    "    job ||--o{ application : \"contém\"\n",
+    "    application {\n",
+    "        INTEGER job_id\n",
+    "        CHAR(8) batch_id\n",
+    "    }\n",
+    "    application }o--|| candidate : \"pertence\"\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ded4c52-bd9e-4837-875a-d5478ed2d1f3",
+   "metadata": {},
+   "source": [
+    "## **6. Migração para o SGBD**  \n",
+    "### **6.1 Cronograma de Migração**  \n",
+    "```mermaid\n",
+    "gantt\n",
+    "    title Migração para Produção - Julho 2025\n",
+    "    dateFormat  YYYY-MM-DD\n",
+    "    section Preparação\n",
+    "    Backup Completo           : 2025-07-05, 1d\n",
+    "    Validação de Scripts      : 2025-07-06, 2d\n",
+    "    section Execução\n",
+    "    Janela de Migração        : 2025-07-12, 4h\n",
+    "    Validação Pós-Migração    : 2025-07-12, 6h\n",
+    "    section Monitoramento\n",
+    "    Crítico (72h)            : 2025-07-13, 3d\n",
+    "    Estabilização            : 2025-07-16, 7d\n",
+    "```\n",
+    "\n",
+    "### **6.2 Procedimento de Rollback**  \n",
+    "```bash\n",
+    "# Restauração emergencial\n",
+    "pg_restore -d recruitment_db -c -Fc backup_pre_mig.dump\n",
+    "\n",
+    "# Log de incidentes\n",
+    "psql -c \"INSERT INTO migration_logs VALUES ('v3.0', 'ROLLBACK', NOW())\"\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e579423c-f959-4986-9d0e-d2451855ba3d",
+   "metadata": {},
+   "source": [
+    "## **7. Testes e Ajustes**  \n",
+    "### **7.1 Plano de Testes**  \n",
+    "```mermaid\n",
+    "pie\n",
+    "    title Tipos de Testes\n",
+    "    \"Carga\" : 45\n",
+    "    \"Stress\" : 30\n",
+    "    \"Regressão\" : 25\n",
+    "```\n",
+    "\n",
+    "### **7.2 Teste de Stress (pgBench)**  \n",
+    "```bash\n",
+    "# Simular 1.000 aplicações concorrentes\n",
+    "pgbench -c 1000 -T 600 -f simulate_applications.sql recruitment_db\n",
+    "```\n",
+    "\n",
+    "**Resultados**:  \n",
+    "- Throughput: 142 transações/s  \n",
+    "- Erros: 0.02% (abaixo do threshold de 1%)  \n",
+    "\n",
+    "### **7.3 Ajustes Pós-Teste**  \n",
+    "- Aumento de `work_mem` para 128MB em operações batch  \n",
+    "- Adição de réplicas de leitura para queries analíticas  \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbdc4daa-06d0-4912-abef-3f5c3083ae0d",
+   "metadata": {},
+   "source": [
+    "## **8. Manutenção Contínua**  \n",
+    "#### **8.1 Arquitetura de Alta Disponibilidade**  \n",
+    "```mermaid\n",
+    "flowchart LR\n",
+    "    A[Primário] --> B[Réplica Síncrona]\n",
+    "    A --> C[Réplica Assíncrona]\n",
+    "    B --> D[Failover Automático]\n",
+    "```\n",
+    "\n",
+    "### **8.2 Backup e Recuperação**  \n",
+    "**Rotina Diária**:  \n",
+    "```bash\n",
+    "pg_dump -Fc -Z 9 -f s3://backups/recruitment_$(date +%Y%m%d).dump\n",
+    "```\n",
+    "\n",
+    "**Política de Retenção**:  \n",
+    "- Diários: 7 dias  \n",
+    "- Semanais: 4 semanas  \n",
+    "- Mensais: 12 meses  \n",
+    "\n",
+    "### **8.3 Roadmap Técnico 2025**  \n",
+    "```mermaid\n",
+    "gantt\n",
+    "    title Roadmap Banco de Dados - 2025\n",
+    "    dateFormat  YYYY-MM-DD\n",
+    "    section Q3\n",
+    "    Migração PostgreSQL 16      :2025-08-01, 15d\n",
+    "    Implementação Columnar      :2025-08-20, 20d\n",
+    "    section Q4\n",
+    "    Backup Multi-Cloud          :2025-10-01, 30d\n",
+    "    Zero-Downtime Upgrades      :2025-11-15, 45d\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4632199-2f65-4aa6-a463-4c3ba12789a6",
+   "metadata": {},
+   "source": [
+    "### **Resumo das Modificações Estruturais**  \n",
+    "| **Componente**         | **Alteração**                | **Impacto**                                  |  \n",
+    "|------------------------|------------------------------|----------------------------------------------|  \n",
+    "| Partição `job`         | Por `status`                 | Redução de 70% em consultas de vagas ativas  |  \n",
+    "| Campo `batch_id`       | Adicionado em `application`  | Viabilizou RN04 com ganho de 40% performance |  \n",
+    "| Remoção de `JSONB`     | Tabelas normalizadas         | Economia de 15GB em armazenamento            |  \n",
+    "| Índices filtrados      | `WHERE status IN ('OPEN')`   | Latência média de 50ms em queries críticas   |  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Próximos Passos Imediatos**  \n",
+    "1. **Executar migração em staging** (12/07/2025):  \n",
+    "   ```bash\n",
+    "   psql -h staging-db -U deploy -f migration_v3.0.sql\n",
+    "   ```  \n",
+    "2. **Validar relatórios de performance**:  \n",
+    "   ```sql\n",
+    "   SELECT * FROM pg_stat_statements ORDER BY total_exec_time DESC LIMIT 10;\n",
+    "   ```  \n",
+    "3. **Treinamento da equipe**:  \n",
+    "   - Novos procedimentos de RLS (15/07/2025)  \n",
+    "   - Gerenciamento de partições (17/07/2025)  \n",
+    "\n",
+    "> **Documentação completa disponível em**:  \n",
+    "> `\\\\nas\\recruitment-db\\docs\\modelo_fisico_v3.0.pdf`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe0a56e-11c3-41a3-b9ce-759a28ebcb03",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792d7c5a-ccc9-4053-a0c5-fd112bfbf6b1",
+   "id": "af10858a-d527-4e7f-9751-53ccece908ba",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Reescreva/Revise o documento; \n",
-    "Evitando redundancia manha o documento o mais completo possivel;\n",
-    "Na parte da modelagem reescreva os atributos chaves das tabelas em ingles;\n",
-    "Mantenha o nome das tabela e todo o restoado documento no idioma original\n",
-    "Se possível comente onde e porque fez a mudança no final do documento;"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "958cf3e2-7ca2-4ebd-aa48-4c81e05668ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "806c710c-6c33-4195-b42e-890f4db6a17f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
