--- a/index.ipynb
+++ b/index.ipynb
@@ -152,11 +152,9 @@
   {
    "cell_type": "markdown",
    "id": "29596e0e-5534-4b06-8227-af155a73a2f0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### **Modelo Lógico de Banco de Dados - Sistema de Recrutamento (NEW)**  \n",
+    "# **Modelo Lógico de Banco de Dados - Sistema de Recrutamento (NEW)**  \n",
     "\n",
     "#### **1. Objetivo Geral**  \n",
     "Transformar o modelo conceitual em uma estrutura lógica implementável, definindo:  \n",
@@ -248,7 +246,7 @@
    "id": "1bdb0f4f-9d31-4e8f-bf42-f5cb687e7475",
    "metadata": {},
    "source": [
-    "### **Processo de Modelagem de Dados para Sistema de Gestão de Vagas (NEW)**  \n",
+    "# **Processo de Modelagem de Dados para Sistema de Gestão de Vagas (NEW)**  \n",
     "**Data de Revisão: 7 de julho de 2025**  \n",
     "\n",
     "---\n",
